@@ -16,6 +16,10 @@ structure with a rdup archive.
 
 .SH OPTIONS
 .TP
+.B \-s N
+Strip N path components from a pathname. If the resulting pathname is
+empty after this operation the entire entry is skipped.
+.TP
 .B \-n
 Do a dry-run and do not create anything on disk.
 .TP
