@@ -1,5 +1,6 @@
 24 Dec 2008: 0.6.4 Miek <miek@miek.nl>
   * rdup-up: further updates and refinements
+  * rdup-up: added strip() function to strip leading path components
 
 
 17 Dec 2008: 0.6.4-rc1 Miek <miek@miek.nl>
